; ModuleID = '/home/carl/AnghaBench/redis/deps/lua/src/extr_liolib.c_getiofile.c'
source_filename = "/home/carl/AnghaBench/redis/deps/lua/src/extr_liolib.c_getiofile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_ENVIRONINDEX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"standard %s file is closed\00", align 1
@fnames = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32)* @getiofile to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @getiofile(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = load i32, i32* @LUA_ENVIRONINDEX, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call i32 @lua_rawgeti(i32* %6, i32 %7, i32 %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i64 @lua_touserdata(i32* %10, i32 -1)
  %12 = inttoptr i64 %11 to i32**
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %5, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = icmp eq i32* %14, null
  br i1 %15, label %16, label %25

16:                                               ; preds = %2
  %17 = load i32*, i32** %3, align 8
  %18 = load i32*, i32** @fnames, align 8
  %19 = load i32, i32* %4, align 4
  %20 = sub nsw i32 %19, 1
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %18, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @luaL_error(i32* %17, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %23)
  br label %25

25:                                               ; preds = %16, %2
  %26 = load i32*, i32** %5, align 8
  ret i32* %26
}

declare dso_local i32 @lua_rawgeti(i32*, i32, i32) #1

declare dso_local i64 @lua_touserdata(i32*, i32) #1

declare dso_local i32 @luaL_error(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
